# crowd-poetry

./: .gitignore  README.md  devlog.md  start.sh
app/python/: data.db  readme.md
app/python/filmot_scraper/: downloader.py  scraper.py  trim.py
app/sc/: loader.py  pyproject.toml  readme.md  sampler.scd
app/web/: index.html  package.json  vite.config.ts
app/web/src/: App.tsx  index.css
bruno/: Current Poem.bru  Known.bru  Search.bru  Update Poem.bru  bruno.json
cad/: Enclosure.blend  Enclosure.stl  Top.blend  Top.stl
node/: data.json  package-lock.json  package.json  tsconfig.json
node/src/: index.ts  search.ts
node/src/@types/: index.d.ts
node2/: package-lock.json  package.json
node2/src/: app.js  app.ts
puredata/: _test.py  loader.py  play.pd
puredata/minimal/: listen.pd  send.py  tone.pd
python/: pyproject.toml  readme.md  run.py
python/filmot_scraper/: __init__.py  api.py  db.py  downloader.py  scraper.py  trim.py
sc/: pyproject.toml
src/: pyproject.toml
teensy/src/: main.cpp
web/: package-lock.json
web/src/: App.tsx
