[project]
name = "crowd-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael Hemingway",email = "mpghemingway@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9.0"
package-mode = false
dependencies = [
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "requests (>=2.32.3,<3.0.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "yt-dlp (>=2025.1.26,<2026.0.0)",
    "vosk (==0.3.44)",
    "pydub (>=0.25.1,<0.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
indent-width = 2
target-version = "py39"