[project]
name = "supercollider-send"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael Hemingway",email = "mpghemingway@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-osc (>=1.9.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
